Added flowcomponent file upload